# routes/orderRoutes.js
@@ -12,17 +12,25 @@ const {
   verifyTokenAndAdmin,
 } = require("../middlewares/verifyToken");
 
+const { photoUpload } = require("../middlewares/photoUpload");
+
 const router = express.Router();
+
+const uploadOrderFiles = photoUpload.fields([
+  { name: "images", maxCount: 10 },
+  { name: "employeeSignature", maxCount: 1 },
+  { name: "customerSignature", maxCount: 1 },
+]);
 
 router
   .route("/")
-  .post(verifyToken, createOrderCtrl)
-  .get(verifyToken, getAllOrdersCtrl);
+  .post(verifyToken, uploadOrderFiles, createOrderCtrl)
+  .get(getAllOrdersCtrl);
 
 router
   .route("/:id")
-  .get(verifyToken, getOrderByIdCtrl)
-  .delete(verifyTokenAndAdmin, deleteOrderCtrl)
-  .put(verifyToken, updateOrderCtrl);
+  .get(getOrderByIdCtrl)
+  .delete(deleteOrderCtrl)
+  .put(updateOrderCtrl);
 
 module.exports = router;
